# MPC_cartpole

./: .gitmodules  README.md  a.out  acados_mpc.json
acados/: CartPole.py  CostFunction.py  MPC.py  main.py
c_generated_code/: CMakeLists.txt  acados_sim_solver_cart_pole.c  acados_sim_solver_cart_pole.h  acados_solver.pxd  acados_solver_cart_pole.c  acados_solver_cart_pole.h  acados_solver_sfunction_cart_pole.c  main_cart_pole.c  main_sim_cart_pole.c  make_sfun_cart_pole.m
c_generated_code/cart_pole_model/: cart_pole_expl_ode_fun.c  cart_pole_expl_vde_adj.c  cart_pole_expl_vde_forw.c  cart_pole_model.h
casadi/: CartPole.py  CostFunction.py  MPC.py  cartpole.urdf  main.py  pybullet_model.py  pybullet_sim.py
include/: MPC_cartpole.hpp
ipopt/: a.out  build_and_run.sh  main.cpp
ipopt/include/: MPC_cartpole.hpp
sampling_base/: CMakeLists.txt  a.out  main.cpp
sampling_base/include/: CartPole.hpp  MCMPC_CartPole.hpp
sampling_base_GPU/: CMakeLists.txt  main.cpp  setup.py
sampling_base_GPU/include/: CartPole.cu  CartPole.cuh  MCMPC_CartPole.cuh  MCMPC_config.cuh  cuda_utils.cuh  rate_analysis.hpp
sampling_base_GPU/model/: cartpole.urdf
sampling_base_GPU/scripts/: pybullet_sim.py
sampling_base_GPU/src/: CartPole.cu  MCMPC_CartPole.cu  MCMPC_CartPole_pybind.cpp  cuda_utils.cu
